--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
   <title>Naveen Portfolio</title>
+  <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 </head>
 
 <body>
